Enable responsive font size to prevent oversized titles on mobile

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,6 +19,7 @@ $theme-colors: (
 );
 
 
+$enable-responsive-font-sizes: true; // Reduce heading font sizes on mobile
 
 
 // Body
